[package]
name = "gitable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
bcrypt = "0.15.0"
git2 = "0.18.2"
rusqlite = "0.31.0"
tide = "0.16.0"
